# Test01

./: CMakeLists.txt  main.cpp
BitNumber/: BitNumber.h  CMakeLists.txt  main.cpp
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixMarketData.cpp  MatrixMarketData.h  main.cpp
MatrixLoad/: BitNumber.cpp  BitNumber.h  CMakeLists.txt  GlobalDeclerations.h  MatrixCSC.cpp  MatrixCSC.h  MatrixCSR.cpp  MatrixCSR.h  MatrixData.h  MatrixMarketData.h  MatrixTimingBenchmark.cpp  MatrixTimingBenchmark.h  MatrixUtilities.cpp  MatrixUtilities.h  SegmentedMatrixCSC.cpp  SegmentedMatrixCSC.h  SegmentedMatrixCSR.h  SparseMatrixProposalBenchmark.xlsx  SparseMatrixProposalBenchmark4.csv  SparseMatrixProposalBenchmarkX.csv  SparseMatrixProposalBenchmark_20240118-144237.csv  SparseMatrixProposalBenchmark_20240119-110843.csv  SparseMatrixProposalBenchmark_20240119-114013.csv  main.cpp
MatrixMarketData/: 130bit.mtx  BitNumber.cpp  BitNumber.h  CMakeLists.txt  CSR_Test.mtx  GlobalDeclerations.h  Matrix.cpp  Matrix.h  MatrixCSR.h  MatrixData.cpp  MatrixData.h  MatrixMarketData.cpp  MatrixMarketData.h  SegmentedMatrixCSR.cpp  SegmentedMatrixCSR.h  SparseMatrixProposalBenchmark.csv  XSparseMatrixProposalBenchmark.csv  XSparseMatrixProposalBenchmark.xlsx  XXSparseMatrixProposalBenchmark.csv  XXXSparseMatrixProposalBenchmark.csv  lpi_cplex2.mtx  main.cpp
